<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/home_like"
        android:icon="@drawable/likes"
        android:title="@string/Like"
        android:contentDescription="@string/Like"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/home_favorite"
        android:icon="@drawable/whishlists"
        android:title="@string/Favorite"
        android:contentDescription="@string/Favorite"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/button_signout_home"
        android:icon="@drawable/signout_button"
        android:title="@string/sign_out"
        android:contentDescription="@string/Favorite"
        app:showAsAction="ifRoom"/>
</menu>
