<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="#1A2026">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp"/>

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/welcome"
            android:paddingTop="50dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="55sp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/please_signin_login_message"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/login_title"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>

        <EditText
            android:id="@+id/email_input_login"
            android:layout_width="320dp"
            android:layout_height="40sp"
            android:textColor="@color/white"
            android:background="#1E262C"
            android:hint="@string/emailHint"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/login_text"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>
        <EditText
            android:id="@+id/password_input_login"
            android:layout_width="320dp"
            android:layout_height="40sp"
            android:textColor="@color/white"
            android:background="#1E262C"
            android:inputType="textPassword"
            android:hint="@string/passwordHint"
            android:textColorHint="@color/white"
            android:layout_marginTop="10dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/email_input_login"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>
        <Button
            android:id="@+id/login_button"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:background="#636af6"
            android:text="@string/login"
            android:layout_marginTop="60dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/password_input_login"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>
        <Button
            android:id="@+id/register_button"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:background="@drawable/button_border_simple"
            android:text="@string/signup"
            android:layout_marginTop="10dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>
        <TextView
            android:id="@+id/forgot_password_link"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:textColor="@color/white"
            android:text="@string/passord_forgot"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
