<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="#1A2026">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp"/>

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/inscription"
            android:paddingTop="50dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="55sp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/signup_text"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/register_title"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>

        <EditText
            android:id="@+id/username_input_register"
            android:layout_width="320dp"
            android:layout_height="40sp"
            android:textColor="@color/white"
            android:background="#1E262C"
            android:hint="@string/username"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/register_text"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>
        <EditText
            android:id="@+id/email_input_register"
            android:layout_width="320dp"
            android:layout_height="40sp"
            android:textColor="@color/white"
            android:background="#1E262C"
            android:hint="@string/emailHint"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/username_input_register"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>
        <EditText
            android:id="@+id/password_input_register"
            android:layout_width="320dp"
            android:layout_height="40sp"
            android:textColor="@color/white"
            android:background="#1E262C"
            android:inputType="text"
            android:hint="@string/passwordHint"
            android:textColorHint="@color/white"
            android:layout_marginTop="10dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/email_input_register"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>
        <EditText
            android:id="@+id/confirm_password_input_register"
            android:layout_width="320dp"
            android:layout_height="40sp"
            android:textColor="@color/white"
            android:background="#1E262C"
            android:inputType="text"
            android:hint="@string/verify_passwordHint"
            android:textColorHint="@color/white"
            android:layout_marginTop="10dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/password_input_register"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>
        <Button
            android:id="@+id/create_account_button"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:textColor="@color/gray"
            android:background="#636af6"
            android:enabled="false"
            android:alpha="1"
            android:text="@string/create_new_account"
            android:layout_marginTop="60dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_input_register"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>

        <Button
            android:id="@+id/return_login_page"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:background="#636af6"
            android:textColor="@color/white"
            android:text="@string/back"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>