<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="#1A2026">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp"/>

        <TextView
            android:id="@+id/forgot_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/passord_forgot"
            android:paddingTop="50dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>


        <TextView
            android:id="@+id/forgot_password_text"
            android:layout_width="wrap_content"
            android:layout_height="55sp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/enter_email_for_forgot_password"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_title"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>

        <EditText
            android:id="@+id/forgot_password_email_input"
            android:layout_width="320dp"
            android:layout_height="40sp"
            android:textColor="@color/white"
            android:background="#1E262C"
            android:inputType="textEmailAddress"
            android:hint="@string/emailHint"
            android:textColorHint="@color/white"
            android:layout_marginTop="10dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_text"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>
        <Button
            android:id="@+id/forgot_password_button"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:background="#636af6"
            android:text="@string/resent_password"
            android:layout_marginTop="20dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_email_input"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>

        <Button
            android:id="@+id/return_login_page_forgot"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:background="#636af6"
            android:textColor="@color/white"
            android:text="@string/back"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/guidelineStart"
            app:layout_constraintRight_toLeftOf="@id/guidelineEnd"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>