<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/game_item_of_list"
    android:background="@color/gray_blue"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/game_background_item_list"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/destiny_2_background"
        android:alpha="0.15"
        android:scaleType="centerCrop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/game_image_item_list"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/destiny2_ps4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/game_name_item_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text="@string/game_name"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/game_image_item_list"
        app:layout_constraintTop_toTopOf="@id/game_image_item_list" />

    <TextView
        android:id="@+id/game_editor_item_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_editor"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/game_image_item_list"
        app:layout_constraintTop_toBottomOf="@+id/game_name_item_list"/>

    <TextView
        android:id="@+id/game_price_item_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_price"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:layout_marginTop="15sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/game_image_item_list"
        app:layout_constraintTop_toBottomOf="@+id/game_editor_item_list"/>


</androidx.constraintlayout.widget.ConstraintLayout>
