<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GameDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_blue">

        <androidx.appcompat.widget.Toolbar
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/game_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/back"
            app:title="@string/GameDetail"
            app:titleTextColor="@color/white"
            app:menu="@menu/toolbar_menu_game_detail"
            android:background="@color/gray_blue"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/game_background_detail"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/man_hunter"
            android:scaleType="centerCrop"
            android:contentDescription="@string/the_game_background"
            app:layout_constraintTop_toBottomOf="@id/game_detail_toolbar"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/game_detail_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/game_background_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:id="@+id/game_detail_content_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="MissingConstraints">

                <Button
                    android:id="@+id/button_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DESCRIPTION" />

                <Button
                    android:id="@+id/button_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/REVIEW" />
            </LinearLayout>

            <include
                android:id="@+id/game_description_view_in_detail"
                layout="@layout/layout_game_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/game_detail_content_buttons" />

            <include
                android:id="@+id/game_reviews_view_in_detail"
                layout="@layout/layout_game_reviews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintLeft_toLeftOf="@id/game_detail_content"
                app:layout_constraintRight_toRightOf="@id/game_detail_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/game_detail_content_buttons" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/game_detail_preview_card"
            layout="@layout/game_card"
            android:layout_width="360dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/game_background_detail"
            app:layout_constraintBottom_toTopOf="@id/game_detail_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
